tests/pass/files/proj6_man_pass_assignment-of-complete-arrays.c
int main () {
    int a[5];
    a[0] = 1;

    int b[5] = {1, 2, 3, 4, 5};
    int c[5] = {1, 2, 3};
    b[1] = 58;
    c[2] = 99;
}