tests/semantic_errors/files/proj_7_struct_invalid_access.c
struct A {
    int num;
};

int main() {
    int a = 2;
    a.num = 1;
    return 0;
}